--- a/mural/templates/mural/_view.html
+++ b/mural/templates/mural/_view.html
@@ -1,6 +1,6 @@
 {% load i18n mural_filters %}
 
-<div id="post-{{ post.id }}" class="row panel panel-default">
+<div id="post-{{ post.id }}" class="panel panel-default">
 	<div class="panel-body post">
 		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 post-img">
 			<img src="{{ post.user.image_url }}" class="img-responsive" />
