language selector has same hover design as settings and modified resource options in topic

--- a/subjects/templates/subjects/list_search.html
+++ b/subjects/templates/subjects/list_search.html
@@ -3,6 +3,13 @@
 {% load static i18n pagination %}
 {% load django_bootstrap_breadcrumbs subject_counter %}
 
+
+{% block javascript%}
+    {{ block.super }}
+    <script type="text/javascript" src=" {% static "js/category.js" %} "></script>
+{% endblock%}
+
+
 {% block breadcrumbs %}
 	{% clear_breadcrumbs %}
    	{% breadcrumb 'Home' 'subjects:home' %}
