--- a/mural/templates/mural/_view.html
+++ b/mural/templates/mural/_view.html
@@ -43,15 +43,20 @@
 				<img src="{{ post.image.url }}" class="img-responsive center-block" />
 			{% endif %}
 		</div>
+		<div class="col-md-12 comment-section">
+			{% for comment in post.comment_post.all %}
+				{% include 'mural/_view_comment.html' %}
+			{% endfor %}
+		</div>
 		<div class="col-md-12 post-comment">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 user-img">
 				<div>
 					<img src="{{ request.user.image_url }}" class="img-responsive" />
 				</div>
 			</div>
-			<div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 comment-field">
+			<div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 comment-field" onclick="comment($(this))">
 				<div>
-					<h4 data-url="{% url 'mural:create_general' %}">{% trans 'Make a comment...' %}</h4>
+					<h4 data-url="{% url 'mural:create_comment' post.mural_ptr_id %}">{% trans 'Make a comment...' %}</h4>
 				</div>
 			</div>
 		</div>
