--- a/mural/templates/mural/_view_comment.html
+++ b/mural/templates/mural/_view_comment.html
@@ -10,7 +10,7 @@
 		<h4 class="comment-user">
 			{{ comment.user }}
 			<span class="user-action">
-				<i class="fa fa-comments-o"></i>
+				<i class="fa fa-commenting-o"></i>
 				{% trans 'Comment' %}
 			</span>
 			{% if request.user == comment.user or request.user.is_staff %}
