--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1087,6 +1087,8 @@ li.item .notify_badge {
 .comment-section {
     max-height: 700px;
     overflow-y: scroll;
+    border-top-width: 1px;
+    border-top-style: solid;
 }
 
 .comment {
