--- a/pdf_file/templates/pdf_file/view.html
+++ b/pdf_file/templates/pdf_file/view.html
@@ -13,20 +13,22 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-	{{ block.super }}
-
-	{% breadcrumb topic 'subjects:topic_view' topic.subject.slug topic.slug %}
-	
+	{% clear_breadcrumbs %}
+	{% breadcrumb 'Home' 'subjects:home' %}
+	{% breadcrumb pdf_file.topic.subject.category 'subjects:cat_view'  pdf_file.topic.subject.category.slug %}
+	{% breadcrumb pdf_file.topic.subject 'subjects:view' pdf_file.topic.subject.slug %}
+	{% breadcrumb pdf_file.topic 'subjects:topic_view' pdf_file.topic.subject.slug pdf_file.topic.slug %}
+	{% breadcrumb pdf_file 'pdf_file:view' pdf_file.slug %}
 	
 {% endblock %}
 
 
 {% block content %}
 
-<object width="100%" height="100%" type="application/pdf" data="{{pdf_file.file.path}}" id="pdf_content">
-    <p>Insert your error message here, if the PDF cannot be displayed.</p>
+<object width="100%" height="800px" type="application/pdf" data="{{pdf_file.file.url}}" id="pdf_content">
+    <p>{% trans "PDF could not be displayed" %}</p>
   </object>
 
-  <embed src="{{pdf_file.file.path}}" width="100%" height="100%">
+  
  
 {% endblock content %}
