--- a/pdf_file/templates/pdf_file/view.html
+++ b/pdf_file/templates/pdf_file/view.html
@@ -15,16 +15,34 @@
 {% block breadcrumbs %}
 	{% clear_breadcrumbs %}
 	{% breadcrumb 'Home' 'subjects:home' %}
-	{% breadcrumb pdf_file.topic.subject.category 'subjects:cat_view'  pdf_file.topic.subject.category.slug %}
-	{% breadcrumb pdf_file.topic.subject 'subjects:view' pdf_file.topic.subject.slug %}
-	{% breadcrumb pdf_file.topic 'subjects:topic_view' pdf_file.topic.subject.slug pdf_file.topic.slug %}
+	{% breadcrumb subject.category 'subjects:cat_view'  subject.category.slug %}
+	{% breadcrumb subject 'subjects:view' subject.slug %}
+	{% breadcrumb pdf_file.topic 'subjects:topic_view' subject.slug pdf_file.topic.slug %}
 	{% breadcrumb pdf_file 'pdf_file:view' pdf_file.slug %}
 	
 {% endblock %}
 
 
 {% block content %}
+ {% if subject.visible %}
+		<div class="panel panel-info topic-panel">
+        	<div class="panel-heading">
+	{% elif has_subject_permissions %}
+		<div class="panel panel-info topic-panel-invisible">
+        	<div class="panel-heading panel-invisible">
+    {% endif %}
+        		<div class="row">
+                    <div class="col-md-12 category-header">
+                        <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
+                            <span>{{ webpage }}</span>
+                        </h4>
 
+                        <div class="col-md-5 pull-right category-card-items">
+                            <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 <object width="100%" height="800px" type="application/pdf" data="{{pdf_file.file.url}}" id="pdf_content">
     <p>{% trans "PDF could not be displayed" %}</p>
   </object>
