--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -55,7 +55,26 @@
                    
                     </form>
                     
-                     <li class="dropdown language-selector col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1"> 
+                   
+                    <div class="row">
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+                            {% if not deny_register %}
+                                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+                                    <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
+                                </div>
+                                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
+                                    <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
+                                </div>
+                            {% else %}
+                                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3 text-center">
+                                    <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="row">
+
+                          <li class="dropdown language-selector pull-right "> 
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
                             <img src="{% static "img/brazilicon.png" %}" />
                         </a>
@@ -74,23 +93,6 @@
                             </li>
                         </ul>
                     </li>
-                    <div class="row">
-                        <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
-                            {% if not deny_register %}
-                                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                                    <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
-                                </div>
-                                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                                    <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
-                                </div>
-                            {% else %}
-                                <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3 text-center">
-                                    <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
-                                </div>
-                            {% endif %}
-                        </div>
-                    </div>
-                    <div class="row">
                         {% if not deny_register %}
                             <div class="col-sm-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-12">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right forgotPassword">
