added name to pdf view

--- a/pdf_file/templates/pdf_file/view.html
+++ b/pdf_file/templates/pdf_file/view.html
@@ -34,7 +34,7 @@
         		<div class="row">
                     <div class="col-md-12 category-header">
                         <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-                            <span>{{ webpage }}</span>
+                            <span>{{pdf_file}}</span>
                         </h4>
 
                         <div class="col-md-5 pull-right category-card-items">
